# code-lens

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  implementation_plan.md  pyproject.toml  readme.md  real_use_case.md  requirements.txt
codelens/: __init__.py  cli.py  compact_repr.py  config.py  embeddings.py  extractor.py  graph.py  mcp_server.py  models.py  resolver.py  retriever.py  vector_store.py  walker.py
codelens/db/: __init__.py  incremental.py  repository.py  schema.py
codelens/parsers/: __init__.py  base.py  python_parser.py  typescript_parser.py
tests/: test_cli.py  test_db_incremental.py  test_db_repository.py  test_db_schema.py  test_embeddings.py  test_extractor.py  test_graph.py  test_mcp_server.py  test_models.py  test_python_parser.py  test_resolver.py  test_retriever.py  test_typescript_parser.py  test_vector_store.py  test_walker.py
tests/fixtures/: sample_javascript.js  sample_python.py  sample_typescript.ts
